--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,12 @@ body{
   font-size: 96px;
   font-family: 'Orbitron', sans-serif;
 }
+.display{
+  width: 100%;
+  height: 100vh;
+}
+.pluse ,.minuse{
+  width: 50%;
+  padding: 10px 20px;
+  font-size: 24px;
+}
